--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -115,6 +115,8 @@
           {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
         {%- elsif thesis contains entry.type -%}
           {%- capture entrytype -%}<em>{{entry.school}}</em> {%- endcapture -%}
+        {%- elsif entry.type == "inproceedingsearly" -%}
+            {%- capture entrytype -%}To appear in <em>{{entry.booktitle}}</em> {%- endcapture -%}
         {%- else -%}
           {%- capture entrytype -%}{%- endcapture -%}
         {%- endif -%}
